kubernetes/apps/observability/loki/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames: ["loki.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
